clusters/unifyops-home/apps/longhorn/longhorn-ingress.yaml
# middleware: http -> https
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-https-redirect
  namespace: longhorn-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
# HTTP ingress (only entrypoint web) that redirects to HTTPS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-http
  namespace: longhorn-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: longhorn-https-redirect@kubernetescrd
spec:
  ingressClassName: nginx-private
  rules:
    - host: longhorn.unifyops.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
---
# HTTPS ingress (only entrypoint websecure) that serves the UI
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-https
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: nginx-private
  tls:
    - hosts: ["longhorn.unifyops.io"]
      secretName: longhorn-tls
  rules:
    - host: longhorn.unifyops.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
